--- a/bot/index.html
+++ b/bot/index.html
@@ -19,15 +19,15 @@
     <meta name="author" content="dannypent">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="keywords" content="xelS Bot Discord">
-    <meta name="description" content="xelS Bot - A Multipurpose Discord bot">
+    <meta name="keywords" content="kelA Bot Discord">
+    <meta name="description" content="kelA Bot - A Multipurpose Discord bot">
     <meta property="og:image" content="http://puritybot.com/img/purity_avatar.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
     <script data-ad-client="ca-pub-3390506714110523" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" type="c81aa78a559e5ac29d52010c-text/javascript"></script>
 
-    <title>xelS Bot - Multipurpose Discord Bot</title>
+    <title>kelA Bot - Multipurpose Discord Bot</title>
 
     <link rel="shortcut icon" href="img/purity_avatar.png">
 
@@ -124,7 +124,7 @@
 
                     <div class="col-lg-6 col-md-12 sm-text-center">
                         <div class="banner-img">
-                            <img src="./img/robot4.png" class="img-fluid float-right width-100" alt="xelS Bot">
+                            <img src="./img/robot4.png" class="img-fluid float-right width-100" alt="kelA Bot">
                         </div>
                     </div>
 
@@ -142,7 +142,7 @@
             <div class="container">
                 <div class="text-center section-heading">
                     <h2>Awesome Features</h2>
-                    <p class="width-55 sm-width-75 xs-width-95">xelS allows you to add dozens of new features to your Discord server to make it better and more interactive for your community to enjoy!</p>
+                    <p class="width-55 sm-width-75 xs-width-95">kelA allows you to add dozens of new features to your Discord server to make it better and more interactive for your community to enjoy!</p>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-12 sm-margin-20px-bottom">
@@ -153,7 +153,7 @@
                                 <div class="box-circle-small"></div>
                             </div>
                             <h3 class="margin-10px-bottom font-size22 md-font-size20 xs-font-size18">Good Uptime</h3>
-                            <p class="font-size16 line-height-28">xelS bot haves a good host time! 24/7!</p>
+                            <p class="font-size16 line-height-28">kelA bot haves a good host time! 24/7!</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-12 sm-margin-20px-bottom">
@@ -198,26 +198,18 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12 sm-text-center sm-margin-20px-bottom">
-                        <img src="./img/bunny.png" alt="xelS Bot commands">
+                        <img src="./img/bunny.png" alt="kelA Bot commands">
                     </div>
                     <div class="col-lg-6 col-md-12">
                         <div class="padding-30px-left sm-no-padding padding-50px-tb md-padding-30px-tb">
                             <h4 class="sm-margin-lr-auto margin-20px-bottom xs-width-100">Lots More To Explore</h4>
-                            <p class="margin-30px-bottom">xelS has over <strong>74</strong> commands to discover! (Including some <i>hidden</i> ones because we're mean and don't want to tell you everything 😈)</p>
+                            <p class="margin-30px-bottom">kelA has over <strong>74</strong> commands to discover! (Including some <i>hidden</i> ones because we're mean and don't want to tell you everything 😈)</p>
                             <ul class="list-style">
                                 <li><strong>Custom Ranks</strong> - Setup your own ranking and leveling system!</li>
-                                <li><strong>Reaction Roles</strong> - Setup ranks members can get just by reacting!</li>
                                 <li><strong>Server Shop</strong> - Setup custom items to trade / sell on your server!</li>
-                                <li><strong>Slots Gambling</strong> - Satisfy your inner-gambler!</li>
-                                <li><strong>Birthdays</strong> - Never forget a birthday again!</li>
                                 <li><strong>Polls</strong> - Find out what people think or want!</li>
-                                <li><strong>Mod Logs</strong> - Track tons of activity on your server!</li>
                                 <li><strong>Memes</strong> - Turn your friends (or yourself) into a meme!</li>
-                                <li><strong>Giveaways</strong> - Give Stuff away (supports role + level requirements)!</li>
-                                <li><strong>Twitch Alerts</strong> - Never miss another broadcast again!</li>
-                                <li><strong>Pin Collecting</strong> - Good luck all you completionists!</li>
-                                <li><strong>Notepad</strong> - Never forget stuff again!</li>
-                                <li><strong>Soundboard</strong> - Over 100 sounds to play with!</li>
+
                             </ul>
                             <a href="commands.html" class="butn">EXPLORE ALL COMMANDS</a>
                         </div>
@@ -267,11 +259,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5 col-md-12 sm-text-center sm-margin-20px-bottom">
-                        <img style="margin-left:auto;margin-right:auto;display:block;padding-top:10px;padding-bottom:10px;" src="./img/purity_avatar.png" alt="xelS Bot">
+                        <img style="margin-left:auto;margin-right:auto;display:block;padding-top:10px;padding-bottom:10px;" src="./img/purity_avatar.png" alt="kelA Bot">
                     </div>
                     <div class="col-lg-7 col-md-12">
                         <div class="padding-30px-left sm-no-padding">
-                            <h4 class="sm-margin-lr-auto sm-text-center xs-width-100 xs-margin-30px-bottom">So why use xelS over others?</h4>
+                            <h4 class="sm-margin-lr-auto sm-text-center xs-width-100 xs-margin-30px-bottom">So why use kelA over others?</h4>
                             <div id="accordion" class="accordion-style">
                                 <div class="card">
                                     <div class="card-header" id="headingOne">
@@ -296,7 +288,7 @@ What makes it better for <strong>me</strong>?
                                     <div class="card-header" id="headingTwo">
                                         <h5 class="mb-0">
                                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-Most bots never let me customize stuff. Does xelS allow <strong>customization</strong>?
+Most bots never let me customize stuff. Does kelA allow <strong>customization</strong>?
 </button>
                                         </h5>
                                     </div>
@@ -369,7 +361,7 @@ Can I actually <strong>get help</strong> if something goes wrong or I have a que
             </div>
             <div class="footer-bar">
                 <div class="container">
-                    <p class="xs-font-size13">© 2020 <a href="/">xelS Bot</a></p>
+                    <p class="xs-font-size13">© 2020 <a href="/">kelA Bot</a></p>
                 </div>
             </div>
         </footer>
