--- a/bot/index.html
+++ b/bot/index.html
@@ -202,7 +202,7 @@ Get Started - It's Free!
                         <div class="row align-items-center cc_cursor">
                             <div class="col-lg-6 order-lg-2 cc_cursor">
                                 <div class="p-5 cc_cursor">
-                                    <img style="border-radius:10px;" class="img-fluid cc_cursor" src="https://i.ibb.co/9p5G9Q2/img.png" alt="">
+                                    <img style="border-radius:10px;" class="img-fluid cc_cursor" src="https://media.discordapp.net/attachments/767756756214218752/767756828531752990/unknown.png?width=470&height=427" alt="">
                                     <img draggable="false" id="wumpus6" class="wumpus6" style="transform: rotate(-90deg) scaleX(-1);width:95px;position:absolute;margin-left:-15%;margin-top:-20%;z-index:1;cursor:pointer;z-index:1;display:none;">
                                 </div>
                             </div>
